Agrega workflow de prueba y elimina la variable CSRF_TRUSTED_ORIGINS del settings.py

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,12 +3,12 @@ name: Continuous Delivery
 on:
   push:
     branches:
-      - main
+      - test-deploy
   release:
     types: [published]
   workflow_run:
     workflows: ["CI"]
-    branches: [main]
+    branches: [test-deploy]
     types:
       - completed
 
